<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PathTest</string>
    <string name="hello_world">Hello world!</string>
    <string name="common_notify">普通的通知</string>
    <string name="custom_notify">自定义的通知</string>
    <string name="open_new_activity">开始导航</string>
	<string name="widget_text">小部件text</string>
	<string name="widget_text2">小部件text2</string>
	<string name="button">按钮</string>
	<string name="enter_next_activity">进入下一个activity</string>
	<string name="dont_show_any_more">不再显示</string>
</resources>
