<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />
    <Button 
        android:id="@+id/common_notify"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@+id/test"
        android:text="@string/common_notify"
        />
    <Button 
        android:id="@+id/custom_notify"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/custom_notify"
        android:layout_below="@+id/common_notify"
        />
    <Button 
        android:id="@+id/enter_next_activity"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/enter_next_activity"
        android:layout_below="@+id/custom_notify"
        />

</RelativeLayout>
