<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <TextView 
        android:id="@+id/second_text"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/app_name"
        />
	<Button
	    android:id="@+id/first_button"
	    android:layout_width="match_parent"
	    android:layout_height="@dimen/text_view_height"
	    android:text="@string/widget_text"
	    android:layout_below="@+id/second_text"
	    />
	   <Button
	       android:id="@+id/second_button"
	       android:layout_width="match_parent"
	       android:layout_height="@dimen/text_view_height"
	       android:text="@string/widget_text2"
	       android:layout_below="@+id/first_button"
	       />
	    
</RelativeLayout>
